src/main/java/gov/nist/csd/pm/pap/pml/antlr/PMLParser.java
// Generated from PMLParser.g4 by ANTLR 4.13.1
package gov.nist.csd.pm.pap.pml.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PMLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		OPERATION=1, NODEOP=2, CHECK=3, ROUTINE=4, CREATE=5, DELETE=6, POLICY_ELEMENT=7, 
		CONTAINED=8, RULE=9, WHEN=10, PERFORMS=11, AS=12, ON=13, IN=14, DO=15, 
		ANY=16, ASCENDANT_OF=17, INTERSECTION=18, UNION=19, PROCESS=20, SET_RESOURCE_OPERATIONS=21, 
		ASSIGN=22, DEASSIGN=23, FROM=24, SET_PROPERTIES=25, WITH_PROPERTIES=26, 
		OF=27, TO=28, ASSOCIATE=29, AND=30, WITH=31, DISSOCIATE=32, DENY=33, PROHIBITION=34, 
		OBLIGATION=35, ACCESS_RIGHTS=36, POLICY_CLASS=37, OBJECT_ATTRIBUTE=38, 
		USER_ATTRIBUTE=39, USER_ATTRIBUTES=40, OBJECT_ATTRIBUTES=41, OBJECT=42, 
		USER=43, ATTRIBUTE=44, ASSOCIATIONS=45, BREAK=46, DEFAULT=47, MAP=48, 
		ELSE=49, CONST=50, IF=51, RANGE=52, CONTINUE=53, FOREACH=54, RETURN=55, 
		VAR=56, STRING_TYPE=57, BOOL_TYPE=58, VOID_TYPE=59, ARRAY_TYPE=60, NIL_LIT=61, 
		TRUE=62, FALSE=63, ID=64, OPEN_PAREN=65, CLOSE_PAREN=66, OPEN_CURLY=67, 
		CLOSE_CURLY=68, OPEN_BRACKET=69, CLOSE_BRACKET=70, ASSIGN_EQUALS=71, COMMA=72, 
		SEMI=73, COLON=74, DOT=75, DECLARE_ASSIGN=76, LOGICAL_OR=77, LOGICAL_AND=78, 
		EQUALS=79, NOT_EQUALS=80, EXCLAMATION=81, PLUS=82, DOUBLE_QUOTE_STRING=83, 
		WS=84, COMMENT=85, LINE_COMMENT=86;
	public static final int
		RULE_pml = 0, RULE_statement = 1, RULE_statementBlock = 2, RULE_createPolicyStatement = 3, 
		RULE_createNonPCStatement = 4, RULE_nonPCNodeType = 5, RULE_createObligationStatement = 6, 
		RULE_createRuleStatement = 7, RULE_subjectPattern = 8, RULE_subjectPatternExpression = 9, 
		RULE_basicSubjectPatternExpr = 10, RULE_operationPattern = 11, RULE_operandPattern = 12, 
		RULE_operandPatternElement = 13, RULE_operandPatternExpressionArray = 14, 
		RULE_operandPatternExpression = 15, RULE_basicOperandPatternExpr = 16, 
		RULE_response = 17, RULE_responseBlock = 18, RULE_responseStatement = 19, 
		RULE_createProhibitionStatement = 20, RULE_setNodePropertiesStatement = 21, 
		RULE_assignStatement = 22, RULE_deassignStatement = 23, RULE_associateStatement = 24, 
		RULE_dissociateStatement = 25, RULE_setResourceOperationsStatement = 26, 
		RULE_deleteStatement = 27, RULE_deleteType = 28, RULE_nodeType = 29, RULE_deleteRuleStatement = 30, 
		RULE_variableDeclarationStatement = 31, RULE_varSpec = 32, RULE_variableAssignmentStatement = 33, 
		RULE_functionDefinitionStatement = 34, RULE_functionSignature = 35, RULE_formalArgList = 36, 
		RULE_formalArg = 37, RULE_returnStatement = 38, RULE_checkStatement = 39, 
		RULE_checkStatementBlock = 40, RULE_idArr = 41, RULE_functionInvokeStatement = 42, 
		RULE_foreachStatement = 43, RULE_breakStatement = 44, RULE_continueStatement = 45, 
		RULE_ifStatement = 46, RULE_elseIfStatement = 47, RULE_elseStatement = 48, 
		RULE_variableType = 49, RULE_mapType = 50, RULE_arrayType = 51, RULE_expression = 52, 
		RULE_expressionList = 53, RULE_literal = 54, RULE_stringLit = 55, RULE_boolLit = 56, 
		RULE_arrayLit = 57, RULE_stringArrayLit = 58, RULE_mapLit = 59, RULE_element = 60, 
		RULE_variableReference = 61, RULE_index = 62, RULE_id = 63, RULE_functionInvoke = 64, 
		RULE_functionInvokeArgs = 65;
	private static String[] makeRuleNames() {
		return new String[] {
			"pml", "statement", "statementBlock", "createPolicyStatement", "createNonPCStatement", 
			"nonPCNodeType", "createObligationStatement", "createRuleStatement", 
			"subjectPattern", "subjectPatternExpression", "basicSubjectPatternExpr", 
			"operationPattern", "operandPattern", "operandPatternElement", "operandPatternExpressionArray", 
			"operandPatternExpression", "basicOperandPatternExpr", "response", "responseBlock", 
			"responseStatement", "createProhibitionStatement", "setNodePropertiesStatement", 
			"assignStatement", "deassignStatement", "associateStatement", "dissociateStatement", 
			"setResourceOperationsStatement", "deleteStatement", "deleteType", "nodeType", 
			"deleteRuleStatement", "variableDeclarationStatement", "varSpec", "variableAssignmentStatement", 
			"functionDefinitionStatement", "functionSignature", "formalArgList", 
			"formalArg", "returnStatement", "checkStatement", "checkStatementBlock", 
			"idArr", "functionInvokeStatement", "foreachStatement", "breakStatement", 
			"continueStatement", "ifStatement", "elseIfStatement", "elseStatement", 
			"variableType", "mapType", "arrayType", "expression", "expressionList", 
			"literal", "stringLit", "boolLit", "arrayLit", "stringArrayLit", "mapLit", 
			"element", "variableReference", "index", "id", "functionInvoke", "functionInvokeArgs"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'operation'", "'nodeop'", "'check'", "'routine'", "'create'", 
			"'delete'", null, "'contained'", "'rule'", "'when'", "'performs'", "'as'", 
			"'on'", "'in'", "'do'", "'any'", "'ascendant of'", null, "'union'", "'process'", 
			"'set resource operations'", "'assign'", "'deassign'", "'from'", "'set properties'", 
			"'with properties'", "'of'", "'to'", "'associate'", "'and'", "'with'", 
			"'dissociate'", "'deny'", "'prohibition'", "'obligation'", "'access rights'", 
			null, null, null, null, null, null, null, "'attribute'", "'associations'", 
			"'break'", "'default'", "'map'", "'else'", "'const'", "'if'", "'range'", 
			"'continue'", "'foreach'", "'return'", "'var'", "'string'", "'bool'", 
			"'void'", "'array'", "'nil'", "'true'", "'false'", null, "'('", "')'", 
			"'{'", "'}'", "'['", "']'", "'='", "','", "';'", "':'", "'.'", "':='", 
			"'||'", "'&&'", "'=='", "'!='", "'!'", "'+'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "OPERATION", "NODEOP", "CHECK", "ROUTINE", "CREATE", "DELETE", 
			"POLICY_ELEMENT", "CONTAINED", "RULE", "WHEN", "PERFORMS", "AS", "ON", 
			"IN", "DO", "ANY", "ASCENDANT_OF", "INTERSECTION", "UNION", "PROCESS", 
			"SET_RESOURCE_OPERATIONS", "ASSIGN", "DEASSIGN", "FROM", "SET_PROPERTIES", 
			"WITH_PROPERTIES", "OF", "TO", "ASSOCIATE", "AND", "WITH", "DISSOCIATE", 
			"DENY", "PROHIBITION", "OBLIGATION", "ACCESS_RIGHTS", "POLICY_CLASS", 
			"OBJECT_ATTRIBUTE", "USER_ATTRIBUTE", "USER_ATTRIBUTES", "OBJECT_ATTRIBUTES", 
			"OBJECT", "USER", "ATTRIBUTE", "ASSOCIATIONS", "BREAK", "DEFAULT", "MAP", 
			"ELSE", "CONST", "IF", "RANGE", "CONTINUE", "FOREACH", "RETURN", "VAR", 
			"STRING_TYPE", "BOOL_TYPE", "VOID_TYPE", "ARRAY_TYPE", "NIL_LIT", "TRUE", 
			"FALSE", "ID", "OPEN_PAREN", "CLOSE_PAREN", "OPEN_CURLY", "CLOSE_CURLY", 
			"OPEN_BRACKET", "CLOSE_BRACKET", "ASSIGN_EQUALS", "COMMA", "SEMI", "COLON", 
			"DOT", "DECLARE_ASSIGN", "LOGICAL_OR", "LOGICAL_AND", "EQUALS", "NOT_EQUALS", 
			"EXCLAMATION", "PLUS", "DOUBLE_QUOTE_STRING", "WS", "COMMENT", "LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PMLParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PMLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PmlContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(PMLParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public PmlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pml; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PMLParserListener ) ((PMLParserListener)listener).enterPml(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PMLParserListener ) ((PMLParserListener)listener).exitPml(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PMLParserVisitor ) return ((PMLParserVisitor<? extends T>)visitor).visitPml(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PmlContext pml() throws RecognitionException {
		PmlContext _localctx = new PmlContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_pml);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 1)) & ~0x3f) == 0 && ((1L << (_la - 1)) & -9154656955725250503L) != 0)) {
				{
				{
				setState(132);
				statement();
				}
				}
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(138);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public VariableAssignmentStatementContext variableAssignmentStatement() {
			return getRuleContext(VariableAssignmentStatementContext.class,0);
		}
		public VariableDeclarationStatementContext variableDeclarationStatement() {
			return getRuleContext(VariableDeclarationStatementContext.class,0);
		}
		public ForeachStatementContext foreachStatement() {
			return getRuleContext(ForeachStatementContext.class,0);
		}
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public BreakStatementContext breakStatement() {
			return getRuleContext(BreakStatementContext.class,0);
		}
		public ContinueStatementContext continueStatement() {
			return getRuleContext(ContinueStatementContext.class,0);
		}
		public FunctionInvokeStatementContext functionInvokeStatement() {
			return getRuleContext(FunctionInvokeStatementContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public CreatePolicyStatementContext createPolicyStatement() {
			return getRuleContext(CreatePolicyStatementContext.class,0);
		}
		public CreateNonPCStatementContext createNonPCStatement() {
			return getRuleContext(CreateNonPCStatementContext.class,0);
		}
		public CreateObligationStatementContext createObligationStatement() {
			return getRuleContext(CreateObligationStatementContext.class,0);
		}
		public CreateProhibitionStatementContext createProhibitionStatement() {
			return getRuleContext(CreateProhibitionStatementContext.class,0);
		}
		public SetNodePropertiesStatementContext setNodePropertiesStatement() {
			return getRuleContext(SetNodePropertiesStatementContext.class,0);
		}
		public AssignStatementContext assignStatement() {
			return getRuleContext(AssignStatementContext.class,0);
		}
		public DeassignStatementContext deassignStatement() {
			return getRuleContext(DeassignStatementContext.class,0);
		}
		public AssociateStatementContext associateStatement() {
			return getRuleContext(AssociateStatementContext.class,0);
		}
		public DissociateStatementContext dissociateStatement() {
			return getRuleContext(DissociateStatementContext.class,0);
		}
		public SetResourceOperationsStatementContext setResourceOperationsStatement() {
			return getRuleContext(SetResourceOperationsStatementContext.class,0);
		}
		public DeleteStatementContext deleteStatement() {
			return getRuleContext(DeleteStatementContext.class,0);
		}
		public DeleteRuleStatementContext deleteRuleStatement() {
			return getRuleContext(DeleteRuleStatementContext.class,0);
		}
		public FunctionDefinitionStatementContext functionDefinitionStatement() {
			return getRuleContext(FunctionDefinitionStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PMLParserListener ) ((PMLParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PMLParserListener ) ((PMLParserListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PMLParserVisitor ) return ((PMLParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(161);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(140);
				variableAssignmentStatement();
				}
				break;
			case 2:
				{
				setState(141);
				variableDeclarationStatement();
				}
				break;
			case 3:
				{
				setState(142);
				foreachStatement();
				}
				break;
			case 4:
				{
				setState(143);
				returnStatement();
				}
				break;
			case 5:
				{
				setState(144);
				breakStatement();
				}
				break;
			case 6:
				{
				setState(145);
				continueStatement();
				}
				break;
			case 7:
				{
				setState(146);
				functionInvokeStatement();
				}
				break;
			case 8:
				{
				setState(147);
				ifStatement();
				}
				break;
			case 9:
				{
				setState(148);
				createPolicyStatement();
				}
				break;
			case 10:
				{
				setState(149);
				createNonPCStatement();
				}
				break;
			case 11:
				{
				setState(150);
				createObligationStatement();
				}
				break;
			case 12:
				{
				setState(151);
				createProhibitionStatement();
				}
				break;
			case 13:
				{
				setState(152);
				setNodePropertiesStatement();
				}
				break;
			case 14:
				{
				setState(153);
				assignStatement();
				}
				break;
			case 15:
				{
				setState(154);
				deassignStatement();
				}
				break;
			case 16:
				{
				setState(155);
				associateStatement();
				}
				break;
			case 17:
				{
				setState(156);
				dissociateStatement();
				}
				break;
			case 18:
				{
				setState(157);
				setResourceOperationsStatement();
				}
				break;
			case 19:
				{
				setState(158);
				deleteStatement();
				}
				break;
			case 20:
				{
				setState(159);
				deleteRuleStatement();
				}
				break;
			case 21:
				{
				setState(160);
				functionDefinitionStatement();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementBlockContext extends ParserRuleContext {
		public TerminalNode OPEN_CURLY() { return getToken(PMLParser.OPEN_CURLY, 0); }
		public TerminalNode CLOSE_CURLY() { return getToken(PMLParser.CLOSE_CURLY, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public StatementBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statementBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PMLParserListener ) ((PMLParserListener)listener).enterStatementBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PMLParserListener ) ((PMLParserListener)listener).exitStatementBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PMLParserVisitor ) return ((PMLParserVisitor<? extends T>)visitor).visitStatementBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementBlockContext statementBlock() throws RecognitionException {
		StatementBlockContext _localctx = new StatementBlockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statementBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			match(OPEN_CURLY);
			setState(167);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 1)) & ~0x3f) == 0 && ((1L << (_la - 1)) & -9154656955725250503L) != 0)) {
				{
				{
				setState(164);
				statement();
				}
				}
				setState(169);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(170);
			match(CLOSE_CURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CreatePolicyStatementContext extends ParserRuleContext {
		public ExpressionContext name;
		public TerminalNode CREATE() { return getToken(PMLParser.CREATE, 0); }
		public TerminalNode POLICY_CLASS() { return getToken(PMLParser.POLICY_CLASS, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public CreatePolicyStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createPolicyStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PMLParserListener ) ((PMLParserListener)listener).enterCreatePolicyStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PMLParserListener ) ((PMLParserListener)listener).exitCreatePolicyStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PMLParserVisitor ) return ((PMLParserVisitor<? extends T>)visitor).visitCreatePolicyStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CreatePolicyStatementContext createPolicyStatement() throws RecognitionException {
		CreatePolicyStatementContext _localctx = new CreatePolicyStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_createPolicyStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(172);
			match(CREATE);
			setState(173);
			match(POLICY_CLASS);
			setState(174);
			((CreatePolicyStatementContext)_localctx).name = expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CreateNonPCStatementContext extends ParserRuleContext {
		public ExpressionContext name;
		public ExpressionContext in;
		public TerminalNode CREATE() { return getToken(PMLParser.CREATE, 0); }
		public NonPCNodeTypeContext nonPCNodeType() {
			return getRuleContext(NonPCNodeTypeContext.class,0);
		}
		public TerminalNode IN() { return getToken(PMLParser.IN, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public CreateNonPCStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createNonPCStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PMLParserListener ) ((PMLParserListener)listener).enterCreateNonPCStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PMLParserListener ) ((PMLParserListener)listener).exitCreateNonPCStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PMLParserVisitor ) return ((PMLParserVisitor<? extends T>)visitor).visitCreateNonPCStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CreateNonPCStatementContext createNonPCStatement() throws RecognitionException {
		CreateNonPCStatementContext _localctx = new CreateNonPCStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_createNonPCStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(176);
			match(CREATE);
			setState(177);
			nonPCNodeType();
			setState(178);
			((CreateNonPCStatementContext)_localctx).name = expression(0);
			setState(179);
			match(IN);
			setState(180);
			((CreateNonPCStatementContext)_localctx).in = expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NonPCNodeTypeContext extends ParserRuleContext {
		public TerminalNode OBJECT_ATTRIBUTE() { return getToken(PMLParser.OBJECT_ATTRIBUTE, 0); }
		public TerminalNode USER_ATTRIBUTE() { return getToken(PMLParser.USER_ATTRIBUTE, 0); }
		public TerminalNode OBJECT() { return getToken(PMLParser.OBJECT, 0); }
		public TerminalNode USER() { return getToken(PMLParser.USER, 0); }
		public NonPCNodeTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nonPCNodeType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PMLParserListener ) ((PMLParserListener)listener).enterNonPCNodeType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PMLParserListener ) ((PMLParserListener)listener).exitNonPCNodeType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PMLParserVisitor ) return ((PMLParserVisitor<? extends T>)visitor).visitNonPCNodeType(this);
			else return visitor.visitChildren(this);
		}
	}
